# fbTools

./: .gitignore  CHANGELOG.md  DEPENDENCIES.md  DEVELOPMENT_NOTES.md  LICENSE  NLF_POSE_IMPLEMENTATION.md  README.md  SCENE_NODES_README.md  SCENE_PROMPT_MANAGER_TABS.md  SCENE_PROMPT_SYSTEM.md  SCENE_PROMPT_USAGE.md  STORY_EDIT_TESTING_GUIDE.md  STORY_EDIT_TESTING_SUMMARY.md  STORY_VIDEO_README.md  TAICHI_INVESTIGATION.md  TESTING_SCENE_TABS.md  TESTING_STRATEGY.md  TEST_COVERAGE_SUMMARY.md  TEST_RESULTS.md  TEST_SUMMARY.md  VIDEO_PROMPT_UI_LAYOUT.md  __init__.py  captioner.py  dependency.json  extension.py  migrate_masks.py  package-lock.json  package.json  prompt_models.py  pyproject.toml  requirements.txt  story_models.py  test_mask_system.py  test_story_batch_lil_tale.py  test_taichi_nlf.py  test_taichi_reinit.py  verify_story_flags_integration.py
.github/: ISSUE_TEMPLATE.md
.github/prompts/: plan-flexibleMultiPromptSystemLibberBugFix.prompt.md
.github/workflows/: build-pipeline.yml
docs/: DATASET_CAPTION_NODES.md  DEBUGGING.md  DEVELOPMENT_NOTES.md  IMPLEMENTATION_STEPS_1_2.md  LIBBER_NODES_README.md  MASK_SYSTEM.md  PHASE_4_COMPLETE.md  README.md  SCENE_NODES_README.md  STORY_NODES_README.md  VIDEO_PROMPT_UX_IMPLEMENTATION.md
docs/testing/: STORY_EDIT_TESTING_FINAL.md  TESTING_GUIDE.md  TEST_RESULTS.md
js/: .gitignore  INTEGRATION_GUIDE.md  MODULAR_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  TESTING_SETUP.md  fb_tools.js  index.js  package.json
js-tests/: dataset_caption_api.test.js  dataset_caption_viewer.test.js  libber_api.test.js  mask_system.test.js  prompt_collection_api.test.js  story_edit.test.js  story_nlf_pose.test.js  test_utils.js
js/api/: dataset_caption.js  libber.js  prompt_collection.js  scene.js  story.js
js/nodes/: dataset_caption_status.js  dataset_caption_viewer.js  libber.js  scene.js  sceneUpdateStatus.js  story.js  video.js
js/styles/: style.css
js/tests/: prompt_collection_api.test.js  test_utils.js
js/utils/: api_base.js  debug_config.js  feedback.js  widgets.js
scripts/: dataset_caption_edit.fish
src/fb_tools/: nodes.pybk
tests/: __init__.py  conftest.py  test_dataset_caption_api.py  test_fb_tools.py  test_libber.py  test_mask_integration.py  test_nlf_integration.py  test_prompt_collection.py  test_prompt_composition_integration.py  test_prompt_processing.py  test_scene_image_save.py  test_scene_prompts_api.py  test_story_edit.py  test_story_flags_integration.py  test_story_scene_pick.py  test_story_video.py  test_video_prompt_persistence.py
utils/: images.py  io.py  logging_utils.py  nlf_pose.py  pose.py  scene_image_save.py  story_video.py  util.py
