[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fb-Tools"
version = "0.1.1"
description = "A collect of custom nodes for ComfyUI, including Scene, Storybuilding, and Libbers, a form of placeholders."
authors = [
  {name = "frost-byte", email = "brian@frost-byte.net"}
]
readme = "README.md"
license = {text = "MIT license"}
requires-python = ">=3.10"
classifiers = []
dependencies = [

]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
Repository = "https://github.com/frost-byte/fbTools"
BugTracker = "https://github.com/frost-byte/fbTools/issues"
Documentation = "https://github.com/frost-byte/fbTools/wiki"


[tool.comfy]
PublisherId = "frost-byte"
DisplayName = "fb-tools"
Icon = "https://raw.githubusercontent.com/frost-byte/fbTools/main/icon_256.png"
Tags = []
Repository = "https://github.com/frost-byte/fbTools"

includes = ['js']

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.pyright]
exclude = [
    "../../custom_nodes/**/*.py",
]
ignore = [
    "src/**/*.py",
]
include = [
    "tests/**/*.py",
    "extension.py",
    "utils/**/*.py",
]
[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
